# Booking_Service_API

./: .dockerignore  .env  .gitignore  DOCKER.md  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  test.db
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_is_admin.py  69a657c9da49_initial_migration_create_all_tables.py  fc8e4f7f5996_initial_create_all_tables.py
app/: celery_app.py  config.py  database.py  main.py
app/models/: __init__.py  booking.py  table.py  user.py  zones.py
app/routers/: admin.py  auth.py  bookings.py  tables.py  users.py  zones.py
app/schemas/: booking.py  table.py  user.py  zones.py
app/tasks/: __init__.py
app/templates/: booking_cancelled.html  booking_confirmation.html
app/utils/: dependencies.py  email.py  security.py
tests/: conftest.py  test_admin.py  test_auth.py  test_bookings.py  test_race_booking.py
