[project]
name = "booking-tables"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "argon2>=0.1.10",
    "argon2-cffi>=25.1.0",
    "celery>=5.6.2",
    "celery-types>=0.24.0",
    "fastapi[all]>=0.128.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
]
